# xlWin32APIHelper

./: .gitmodules  CMakeLists.txt  Encoding.h  FileOP.h  FilePath.h  FileScanner.h  README.md
Include/File/: Operation.h  Path.h
UnitTest/: Main.cpp
